# users-auth-demo

./: .dockerignore  .env  .gitignore  Dockerfile  README.txt  docker-compose.yaml  pyproject.toml  start.sh
guides/: for_devs.txt
protos/v_1_0_0/: users.proto  users_pb2.py  users_pb2.pyi  users_pb2_grpc.py
src/: main.py
src/api_grpc/: routes.py  server.py
src/api_rest/: dependencies.py  exceptions.py
src/api_rest/routes/: __init__.py  admins.py  auth.py  sessions.py  users.py
src/api_rest/schemas/: admin.py  admins.py  auth.py  common.py  sessions.py  user.py  users.py
src/config/: __init__.py  _utils.py  app.py  auth.py  grpc.py  sessions.py  users.py
src/services/auth/: __init__.py  models.py  providers.py  schemas.py  service.py
src/services/events/: __init__.py  events.py  handlers.py  service.py  types.py
src/services/sessions/: __init__.py  models.py  service.py  types.py
src/services/sessions/providers/: __init__.py  abstract.py  dynamodb.py  redis.py
src/services/sessions/providers/memcached/: __init__.py  models.py  provider.py  serializer.py  types.py
src/services/sessions/providers/rdbms/: __init__.py  models.py  provider.py
src/services/users/: __init__.py  models.py  service.py  types.py  webhooks.py
src/services/users/providers/: __init__.py  abstract.py  dynamodb.py
src/services/users/providers/rdbms/: __init__.py  alembic.ini  models.py  provider.py  types.py
src/utils/: exceptions.py  extensions.py  lifespan_hooks.py  logging.py  pagination.py  password.py  singleton.py  validators.py
(+6 files in other folders)
